# mnist-candle

./: .gitignore  Cargo.toml  README.md
inference/: Cargo.toml  LICENSE_MIT
inference/src/: lib.rs  model.rs
mnist-front/: next.config.mjs  package.json  pnpm-lock.yaml
mnist-front/src/components/: BarChart.tsx  Inference.tsx
mnist-front/src/pages/: index.tsx  test.tsx
mnist-front/src/styles/: globals.css
mnist-front/src/utils/: index.ts
training/: Cargo.toml
training/src/: inference.rs  main.rs  mnist_model.rs
